<resources>
    <string name="app_name">Submission1_Intro</string>
    <string name="next_button">Next Button</string>
    <string name="start_reading_for_your_future_investment">Start reading for your future investment!</string>
    <string name="only_best_book">Only Best Book Available</string>
    <string name="keep_upgraded">Enrich your knowledge with our recommendation</string>
    <string name="best_book_recommendation_n_for_you">Best Book Recommendation
        For You</string>
    <string name="desc">Most inspiring and the best book ever written in history of mankind</string>
    <string name="book_title_goes_here">Book Title Goes Here</string>


    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.

Why do we use it?
It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).


Where does it come from?
Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="book_author_written_here">Book Author Written Here</string>
    <string name="see_detail">SEE DETAIL</string>
    <string name="my_profile">My Profile</string>
    <string name="name_henry_augusta_harsono">Name : Henry Augusta Harsono</string>
    <string name="emaill_henryaugusta4_gmail_com">Emaill : henryaugusta4@gmail.com</string>
    <string name="git_github_com_henryaugusta">Git : github.com/henryaugusta</string>
    <string name="resume">I experienced as an Android Developer at several small project at my Campus, Organization , and School, responsible to managing organization Linux server, Laravel website and mobile application for one organization in university , Experienced with several Native API\'s for Android Application such as Maps,Camera, and experienced in Building an RESTful API with Laravel Framework and consume it on Mobile App, also have slight experience at basic HTML, CSS Javascript</string>
    <string name="see_my_profile">See My Profile</string>
</resources>