<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.DestinationActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="-20px"
        android:scaleType="fitXY"
        android:background="@drawable/ic_book_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="-20px"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageDest"
        android:scaleType="centerCrop"
        style="@style/circleImageView"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:src="@drawable/me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/dr_top_rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDest">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="3dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/my_profile"
            android:textColor="@color/bluish1"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="3dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/name_henry_augusta_harsono"
                    android:textColor="@color/bluish1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="3dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/emaill_henryaugusta4_gmail_com"
                    android:textColor="@color/bluish1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="3dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/git_github_com_henryaugusta"
                    android:textColor="@color/bluish1"
                    />

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="3dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Professional Resume : "
                    android:textColor="@color/bluish1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="3dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/resume"
                    android:textColor="@color/bluish1"
                    />

            </LinearLayout>
        </ScrollView>






    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>