<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RecyclerActivity">

    <ImageView
        android:layout_alignParentStart="true"
        android:layout_margin="-20px"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_book_header"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_alignParentStart="true"
        android:layout_margin="-20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_bluish"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:id="@+id/containerTitle"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/best_book_recommendation_n_for_you"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/myProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/see_my_profile"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_baseline_account_circle_24" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_below="@id/containerTitle"
        app:cardElevation="3dp">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Books Recommendation"
                    android:textColor="@color/darkBlue1"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    tools:listitem="@layout/list_recycler1" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>